# phi-chatbot

./: .env.example  .gitignore  AGENT4_COMPLETION_REPORT.md  AGENT4_VISUAL_SUMMARY.md  ANALYSIS_ERROR_HANDLING_ARCHITECTURE.md  CLAUDE.md  PERFORMANCE_ANALYSIS.md  PHASE2_CHANGES.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REORG.md  TODO.md  docker-compose.annotation.yml  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt
annotation/: .eslintrc.json  AGENT_2_COMPLETION_REPORT.md  COMPLETION_REPORT.md  FILES_CREATED.md  README.md  SETUP_VERIFICATION.md  SMOKE_TEST_CHECKLIST.md  SYSTEM_REVIEW.md  SYSTEM_REVIEW_zh-TW.md  TESTING_AGENT4.md  TESTING_GUIDE.md  VISUAL_UI_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js
annotation_backend/: .dockerignore  Dockerfile  main.py  prompts.py  requirements.txt
annotation_frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
app/: __init__.py  config.py  dependencies.py  main.py  main_exp.py  models.py  prompts.py
config/: embedding_config.json
deleted/: transcript_chunker.py
docs/: API_CONTRACT.md  API_CONTRACT_STREAMING.md  ARCHITECTURE.md  ARCHITECTURE.zh-TW.md  BACKEND_API_GUIDE.md  BACKEND_API_GUIDE_zh-TW.md  DEPLOYMENT.md  DEPLOYMENT.zh-TW.md  IMPLEMENTATION.md  IMPLEMENTATION.zh-TW.md  INDEX.md  INDEX.zh-TW.md  QUICKSTART.md  QUICKSTART.zh-TW.md  README.md  README.zh-TW.md  qwen3_reranker_integration.md
(+330 files in other folders)
